--- a/src/app/header/header.html
+++ b/src/app/header/header.html
@@ -1,8 +1,9 @@
 <header class='header'>
-  <div class='float-left'>
-    <header-element></header-element>
+  <div class='float-left size-percent-50 text-left'>
+    <header-element text="Home"></header-element>
+    <header-element text="Events"></header-element>
   </div>
-  <div class='float-right'>
-    <header-element></header-element>
+  <div class='float-left size-percent-50 text-right'>
+    <header-element text="Log in"></header-element>
   </div>
 </header>
