--- a/src/app/header/header.element.html
+++ b/src/app/header/header.element.html
@@ -1,3 +1,3 @@
-<div class='header__element'>
-  <span class='header__element__text-content'>Log In</span>
+<div [ngClass]="text !== 'Log in'?'float-left header__element':'float-right header__element'">
+  <span class='header__element__text-content'>{{ text }}</span>
 </div>
