--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,4 @@
 <header-main></header-main>
 <main>
-    <h1>Hello from Angular Application with</h1>
-    <img src="../assets/images/angular.png">
+  <router-outlet></router-outlet>
 </main>
