--- a/src/app/header/header.element.html
+++ b/src/app/header/header.element.html
@@ -1,5 +1,5 @@
 <div
    [ngClass]="text !== 'Log in'?'float-left header__element':'float-right header__element'"
-   routerLink="{{getRoute()}}">
+   (click)="onClick(getText())">
   <span class='header__element__text-content'>{{ getText() }}</span>
 </div>
