--- a/src/app/body/calendar/td.calendar.html
+++ b/src/app/body/calendar/td.calendar.html
@@ -1,1 +1,1 @@
-<td  [ngClass]="{'days': item.day, 'days-header': !item.day, 'none-active-days': item.day && !item.current}" *ngFor="let item of getTdItem()">{{item.day || item}}</td>
+<td  [ngClass]="{'days': item.day, 'days-header': !item.day, 'none-active-days': item.day && !item.current}" *ngFor="let item of getTdItem()" (click)="dayClick(item)">{{item.day || item}}</td>
