--- a/src/app/body/calendar/calendar.component.css
+++ b/src/app/body/calendar/calendar.component.css
@@ -1,6 +1,10 @@
+table {
+  width: 400px;
+  height: 300px;
+}
+
 td {
-  width: 30px;
-  height: 30px;
+  height: 45px;
   cursor: pointer;
   user-select: none;
 }
